Modify background color and style header
I've modified the html structure to make easier to change background
color and padding of the page, also i've styled the header

--- a/index.html
+++ b/index.html
@@ -5,35 +5,55 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing page</title>
     <link href="style.css" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
 </head>
 <body>
     
     <div class="body">
-        <div class="header">
-            <div class="logo">Custom Logo</div>
-            <div class="links">
-                <ul>
-                    <li><a href="#">Link 1</a></li>
-                    <li><a href="#">Link 2</a></li>
-                    <li><a href="#">Link 3</a></li>
-                </ul>
+        
+        <div class="header-bcolor">
+            <div class="header">
+                <div class="logo">Custom Logo</div>
+                <div class="links">
+                    <ul>
+                        <li><a href="#">Link 1</a></li>
+                        <li><a href="#">Link 2</a></li>
+                        <li><a href="#">Link 3</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
 
-        <div class="top-content">
+        <div class="top-content-bcolor">
+            <div class="top-content">
+            </div>
         </div>
 
-        <div class="center-content">
+        <div class="center-content-bcolor">
+            <div class="center-content">
+            </div>
         </div>
 
-        <div class="quote">
+        <div class="quote-bcolor">
+            <div class="quote">
+            </div>
         </div>
 
-        <div class="sign-up-window">
+        <div  class="sign-up-window-bcolor">
+            <div class="sign-up-window">
+            </div>
         </div>
 
-        <div class="footer">
+        <div class="footer-bcolor">
+            <div class="footer">
+            </div>
         </div>
+
     </div>
+
 </body>
 </html>
