Add title and cards to the center-content div

--- a/index.html
+++ b/index.html
@@ -44,6 +44,31 @@
 
         <div class="center-content-bcolor">
             <div class="center-content">
+
+                <div class="Title">Some random title</div>
+                <div class="cards">
+
+                    <div class="one">
+                        <div class="image-plh"></div>
+                        <div class="subtext">Random text under an illustration</div>
+                    </div>
+
+                    <div class="two">
+                        <div class="image-plh"></div>
+                        <div class="subtext">Random text under an illustration</div>
+                    </div>
+
+                    <div class="three">
+                        <div class="image-plh"></div>
+                        <div class="subtext">Random text under an illustration</div>
+                    </div>
+
+                    <div class="four">
+                        <div class="image-plh"></div>
+                        <div class="subtext">Random text under an illustration</div>
+                    </div>
+                
+                </div>
             </div>
         </div>
 
