--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="center-content-bcolor">
             <div class="center-content">
 
-                <div class="Title">Some random title</div>
+                <div class="title">Some random title</div>
                 <div class="cards">
 
                     <div class="one">
