Minor style changes

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <button class="three">Sign up</button>
                 </div>
 
-                <div class="image-plh">Image placeholder</div>
+                <div class="image-plh"></div>
 
             </div>
         </div>
