--- a/index.html
+++ b/index.html
@@ -74,11 +74,20 @@
 
         <div class="quote-bcolor">
             <div class="quote">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate dolorum quibusdam illo sit iusto perspiciatis provident minus quas fugiat praesentium iure nam, porro commodi eum corrupti deleniti est qui repellat!
+                <div class="author-quote">- Cicero</div>
             </div>
         </div>
 
         <div  class="sign-up-window-bcolor">
             <div class="sign-up-window">
+
+                <div class="sign-up-window-text">
+                    <div class="one">Call to an action! It's time!</div>
+                    <div class="two">Sign up for our product by clicking the button over here!</div>
+                </div>
+            <button>Sign up</button>
+
             </div>
         </div>
 
