--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 
         <div class="footer-bcolor">
             <div class="footer">
+                Copyright © The Odin Project 2021
             </div>
         </div>
 
