Add git repository link to footer

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
         <div class="footer-bcolor">
             <div class="footer">
-                Copyright © The Odin Project 2021
+                Webpage made by <a href="https://github.com/4lokym/odin-landing-page" style="text-decoration: underline; color: white;">4lokim</a>
             </div>
         </div>
 
